--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-        align-items: flex-end;
       }
 
       .sound-btn {
@@ -74,13 +73,6 @@
       .sound-btn img {
         width: 22px;
         height: 22px;
-      }
-
-      .sound-note {
-        margin-top: 6px;
-        font-size: 0.9rem;
-        color: #333;
-        text-align: right;
       }
 
       .container {
@@ -161,7 +153,7 @@
       }
 
       .footer {
-        margin-top: 10px;
+        margin-top: 18px;
         color: #222;
         font-size: 0.95rem;
         line-height: 1.5;
@@ -185,9 +177,6 @@
         .sound-btn {
           font-size: 0.9rem;
           padding: 8px;
-        }
-        .sound-note {
-          text-align: left;
         }
       }
     </style>
@@ -229,13 +218,17 @@
             />
             <span>음악소리</span>
           </div>
-          <p class="sound-note">
+          <!-- 추가한 안내문 (요청된 텍스트) -->
+          <p
+            class="sound-note"
+            style="margin: 0; font-size: 0.9rem; color: #333"
+          >
             🎵 음악소리가 안 나오면 버튼 눌러서 껐다가 켜주세요!
           </p>
         </div>
       </header>
 
-      <!-- 🎮 갈매기 피하기 게임 안내를 상단으로 이동 -->
+      <!-- 요청대로: 게임 버튼 섹션을 최상단(제목과 소리 버튼 바로 밑)으로 이동 -->
       <section class="section" style="margin-top: 0">
         <a class="game-btn" href="game.html">🎮 갈매기 피하기 게임하러 가기</a>
         <p class="footer">
@@ -312,10 +305,12 @@
             </div>
           </article>
         </section>
+
+        <!-- 게임 섹션은 이미 최상단으로 이동했으므로 여기서는 제거함 -->
       </main>
     </div>
 
-    <!-- 유튜브 플레이어 (음소거 자동재생은 브라우저 정책상 상호작용 후에 작동 가능) -->
+    <!-- 유튜브 플레이어 (0x0 크기 유지) -->
     <iframe
       id="wavePlayer"
       width="0"
@@ -334,10 +329,231 @@
       allow="autoplay; encrypted-media"
     ></iframe>
 
-    <!-- 기존 JavaScript (동일, 작동 잘 됨) -->
     <script>
-      /* --- 기존의 완벽히 작동하던 JS 그대로 유지 --- */
-      // (위 코드 그대로 두면 됩니다. 이미 수정된 최신 버전 기준)
+      // 모든 DOM이 준비된 뒤 초기화
+      document.addEventListener('DOMContentLoaded', () => {
+        // UI 요소
+        const waveToggle = document.getElementById('waveToggle');
+        const musicToggle = document.getElementById('musicToggle');
+        const waveIcon = document.getElementById('waveIcon');
+        const musicIcon = document.getElementById('musicIcon');
+
+        // 상태
+        let wavePlaying = true;
+        let musicPlaying = true;
+        let waveYT = null;
+        let musicYT = null;
+        let ytReadyCount = 0;
+        let ytReady = false;
+
+        // 아이콘 업데이트 함수 (UI에 즉시 반영)
+        function updateWaveIcon() {
+          waveIcon.src = wavePlaying
+            ? 'https://img.icons8.com/ios-filled/50/000000/speaker.png'
+            : 'https://img.icons8.com/ios-filled/50/000000/mute.png';
+          waveToggle.setAttribute('aria-pressed', String(wavePlaying));
+        }
+        function updateMusicIcon() {
+          musicIcon.src = musicPlaying
+            ? 'https://img.icons8.com/ios-filled/50/000000/speaker.png'
+            : 'https://img.icons8.com/ios-filled/50/000000/mute.png';
+          musicToggle.setAttribute('aria-pressed', String(musicPlaying));
+        }
+
+        // 초기 아이콘 반영
+        updateWaveIcon();
+        updateMusicIcon();
+
+        // --- YouTube IFrame API 로드 ---
+        (function loadYT() {
+          if (!window.YT) {
+            const s = document.createElement('script');
+            s.src = 'https://www.youtube.com/iframe_api';
+            document.head.appendChild(s);
+          } else {
+            // 이미 로드된 경우 즉시 콜
+            if (typeof onYouTubeIframeAPIReady === 'function')
+              onYouTubeIframeAPIReady();
+          }
+        })();
+
+        // 전역 콜백 정의 (YouTube API 규약)
+        window.onYouTubeIframeAPIReady = function () {
+          // 플레이어 생성: playerVars로 자동/루프 등 설정
+          try {
+            waveYT = new YT.Player('wavePlayer', {
+              events: { onReady: onPlayerReady },
+              playerVars: {
+                autoplay: 1,
+                loop: 1,
+                playlist: 'n4Mdh3TEq_k',
+                controls: 0,
+                disablekb: 1,
+                modestbranding: 1,
+                rel: 0,
+              },
+            });
+
+            musicYT = new YT.Player('musicPlayer', {
+              events: { onReady: onPlayerReady },
+              playerVars: {
+                autoplay: 1,
+                loop: 1,
+                playlist: 'MWRb7zOxxdg',
+                controls: 0,
+                disablekb: 1,
+                modestbranding: 1,
+                rel: 0,
+              },
+            });
+          } catch (e) {
+            console.warn('YT player 생성 실패', e);
+          }
+        };
+
+        function onPlayerReady() {
+          ytReadyCount++;
+          // 플레이어 준비 시 기본 동작: 먼저 mute 상태로 play 시도 (자동재생 정책 우회)
+          if (ytReadyCount >= 2) {
+            ytReady = true;
+            // 가능한 한 먼저 음소거로 재생 시도
+            try {
+              if (waveYT && waveYT.mute) {
+                waveYT.mute();
+                waveYT.playVideo?.();
+              }
+              if (musicYT && musicYT.mute) {
+                musicYT.mute();
+                musicYT.playVideo?.();
+              }
+            } catch (e) {
+              // 실패해도 사용자 상호작용 시 재시도하도록 준비
+              console.log('자동재생 초기 시도 실패 (허용되지 않을 수 있음)');
+            }
+            // 사용자 상호작용으로 언뮤트/볼륨 복원 시도
+            enablePlaybackUnlock();
+          }
+        }
+
+        // 자동재생 정책 우회: 첫 상호작용(클릭/터치/스크롤) 시 음소거로 재생한 뒤 언뮤트 시도
+        function enablePlaybackUnlock() {
+          const unlockEvents = ['touchstart', 'click', 'scroll', 'keydown'];
+          const unlock = async () => {
+            try {
+              if (waveYT) {
+                // play -> mute -> unmute(상태가 켜져있다면)
+                await safePlayMutedThenMaybeUnmute(waveYT, wavePlaying);
+              }
+              if (musicYT) {
+                await safePlayMutedThenMaybeUnmute(musicYT, musicPlaying);
+              }
+            } catch (e) {
+              console.log('unlock 시도 실패', e);
+            }
+            unlockEvents.forEach((ev) =>
+              window.removeEventListener(ev, unlock)
+            );
+          };
+          unlockEvents.forEach((ev) =>
+            window.addEventListener(ev, unlock, { once: true, passive: true })
+          );
+        }
+
+        // 플레이어를 음소거로 재생하고 필요하면 언뮤트
+        async function safePlayMutedThenMaybeUnmute(player, shouldBePlaying) {
+          try {
+            if (player && player.mute) player.mute();
+            // play 시도, 이건 브라우저에서 거부될 수 있음 -> catch
+            if (player && player.playVideo) player.playVideo();
+            // 잠시 기다렸다가 (브라우저 허용 시) 언뮤트
+            setTimeout(() => {
+              try {
+                if (player && player.unMute && shouldBePlaying) player.unMute();
+              } catch (e) {}
+            }, 600);
+          } catch (e) {
+            // play 실패 시 무시
+          }
+        }
+
+        // 안전한 재생/일시정지 호출 (존재 체크 포함)
+        function safePlay(player) {
+          try {
+            if (!player) return;
+            if (player.playVideo) player.playVideo();
+          } catch (e) {}
+        }
+        function safePause(player) {
+          try {
+            if (!player) return;
+            if (player.pauseVideo) player.pauseVideo();
+          } catch (e) {}
+        }
+        function safeMute(player) {
+          try {
+            if (!player) return;
+            if (player.mute) player.mute();
+          } catch (e) {}
+        }
+        function safeUnmute(player) {
+          try {
+            if (!player) return;
+            if (player.unMute) player.unMute();
+          } catch (e) {}
+        }
+
+        // 버튼 이벤트 (UI는 즉시 반응, 플레이어 제어는 준비 상태에서 수행)
+        waveToggle.addEventListener('click', () => {
+          wavePlaying = !wavePlaying;
+          updateWaveIcon();
+          if (!ytReady || !waveYT) {
+            // 플레이어가 준비되지 않았으면 UI만 바꾸고 유저가 상호작용했으니 unlock 재시도
+            enablePlaybackUnlock();
+            return;
+          }
+          if (wavePlaying) {
+            safeUnmute(waveYT);
+            safePlay(waveYT);
+          } else {
+            // 끌 때는 일시정지 (또는 mute만 하고 계속 재생할 수도 있음)
+            safePause(waveYT);
+            safeMute(waveYT);
+          }
+        });
+
+        musicToggle.addEventListener('click', () => {
+          musicPlaying = !musicPlaying;
+          updateMusicIcon();
+          if (!ytReady || !musicYT) {
+            enablePlaybackUnlock();
+            return;
+          }
+          if (musicPlaying) {
+            safeUnmute(musicYT);
+            safePlay(musicYT);
+          } else {
+            safePause(musicYT);
+            safeMute(musicYT);
+          }
+        });
+
+        // 키보드 접근성: 엔터/스페이스로도 토글
+        [waveToggle, musicToggle].forEach((el) => {
+          el.addEventListener('keydown', (e) => {
+            if (e.key === 'Enter' || e.key === ' ') el.click();
+          });
+        });
+
+        // 탭 전환 후 복귀 시 재생 복원 (준비된 경우)
+        document.addEventListener('visibilitychange', () => {
+          if (!document.hidden && ytReady) {
+            setTimeout(() => {
+              if (wavePlaying && waveYT) safePlay(waveYT);
+              if (musicPlaying && musicYT) safePlay(musicYT);
+            }, 300);
+          }
+        });
+      });
     </script>
   </body>
 </html>
