--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
       .sound-btn {
         display: inline-flex;
         align-items: center;
-        gap: 8px;
-        padding: 8px 10px;
-        border-radius: 12px;
+        gap: 6px;
+        padding: 6px 10px; /* 기존 8px 10px → 살짝 줄임 */
+        border-radius: 10px;
         background: rgba(255, 255, 255, 0.9);
         backdrop-filter: blur(4px);
         cursor: pointer;
-        font-size: 0.95rem;
+        font-size: 0.9rem; /* 기존 0.95rem → 글자에 딱 맞게 */
         color: #000;
         box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06);
         user-select: none;
       }
 
       .sound-btn img {
-        width: 22px;
-        height: 22px;
+        width: 18px; /* 기존 22px → 글씨 크기 비율로 맞춤 */
+        height: 18px;
       }
 
       .container {
