--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         color: #000;
         box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06);
         user-select: none;
+        width: fit-content;
       }
 
       .sound-btn img {
