--- a/index.html
+++ b/index.html
@@ -52,23 +52,25 @@
       .sound-controls {
         display: flex;
         flex-direction: column;
+        align-items: flex-end; /* ✅ 버튼들을 오른쪽으로 붙임 */
         gap: 10px;
       }
 
       .sound-btn {
         display: inline-flex;
         align-items: center;
-        gap: 6px;
-        padding: 6px 10px; /* 기존 8px 10px → 살짝 줄임 */
-        border-radius: 10px;
+        gap: 8px;
+        padding: 8px 10px;
+        border-radius: 12px;
         background: rgba(255, 255, 255, 0.9);
         backdrop-filter: blur(4px);
         cursor: pointer;
-        font-size: 0.9rem; /* 기존 0.95rem → 글자에 딱 맞게 */
+        font-size: 0.95rem;
         color: #000;
         box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06);
         user-select: none;
-        width: fit-content;
+        width: fit-content; /* ✅ 글자에 맞춰 박스 폭 자동 조정 */
+        max-width: 90%; /* ✅ 모바일에서도 넘치지 않게 */
       }
 
       .sound-btn img {
