--- a/index.html
+++ b/index.html
@@ -244,7 +244,12 @@
       <main class="container">
         <section id="hamdeok" class="section">
           <h2>함덕해수욕장</h2>
-          <p class="note">위치 지도와 해변 풍경 사진을 차례대로 확인하세요.</p>
+          <p class="note">
+            함덕해수욕장은 고운 모래와 푸른 바다가 어우러진 제주의 대표
+            해변입니다. 수심이 얕고 파도가 잔잔해 가족 단위로 찾기 좋으며,
+            현무암과 아치형 다리가 어우러져 제주의 풍경을 한눈에 감상할 수
+            있습니다.
+          </p>
 
           <figure class="img-card">
             <img src="함덕해수욕장%20위치사진.png" alt="함덕해수욕장 위치" />
